<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.fredericfagla.android.horaireaircotedivoire.AboutActivity"
    android:gravity="center">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingRight="5dp"
            android:paddingLeft="1dp"
            android:gravity="center">

            <!--Airline logo, app name, app version-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/airline_imageView"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                android:background="#00000000"
                android:contentDescription="@string/icon_airline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/versionName"
                android:id="@+id/textView11"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_copyright_app"
                android:id="@+id/textView23"
                android:paddingTop="20dp"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
